# astar-cpp

./: CMakeLists.txt  README.md
datafiles/: config.json
src/: a_star.hpp  main.cpp  pixel_renderer.h
